<resources>
    <string name="app_name">Project Sinthrome</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_continue">Continue</string>
    <string name="action_about">About</string>
    <string name="weight_units">mg</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="error_txt">Error</string>
    <string name="action_timetravel">Simulate passage of 1 day</string>
    <string name="nonapplicable">N/A</string>
    <string name="main_today_txt">Today,</string>
    <string name="bttn_my_dosage">My Dosage Plans</string>
    <string name="bttn_my_treatment">Treatment Settings</string>
    <string name="bttn_cit_science">Citizen Science</string>
    <string name="bttn_hist_and_stats">History &amp; Data</string>
    <string name="dialog_mark_as_taken_title">Mark today\'s dose as \'taken\'?</string>
    <string name="dialog_mark_as_taken_msg">Be sure to mark this only after taking your medication. Do this with as small a delay as possible to ensure the accuracy of your statistics.</string>
    <string name="welcome">Welcome to \n Project Sinthrome</string>
    <string name="welcome_txt">Please accompany us through the initial setup</string>
    <string name="bttn_begin">Begin</string>
    <string name="pref_catg_INR" translatable="false">Your Target Range</string>
    <string name="pref_mininr_key" translatable="false">mininr</string>
    <string name="pref_mininr_title" translatable="false">Minimum INR</string>
    <string name="pref_mininr_default" translatable="false">2.5</string>
    <string name="pref_maxinr_key" translatable="false">maxinr</string>
    <string name="pref_maxinr_title" translatable="false">Maximum INR</string>
    <string name="pref_maxinr_default" translatable="false">3.5</string>
    <string name="pref_catg_time_title" translatable="false">Daily Intakes</string>
    <string name="pref_med_time_key" translatable="false">medTime</string>
    <string name="pref_med_time_title" translatable="false">Time of medicine intake</string>
    <string name="pref_med_time_default" translatable="false">18:30</string>
    <string name="pref_catg_med" translatable="false">Your Medication</string>
    <string name="pref_med_name_key" translatable="false">medName</string>
    <string name="pref_med_name_title" translatable="false">Medicine Name</string>
    <string name="pref_med_name_default">sinthrome</string>
    <string name="pref_mg_per_tablet_key" translatable="false">mgPerTablet</string>
    <string name="pref_mg_per_tablet_title" translatable="false">Milligrams per medicine tablet</string>
    <string name="pref_alarm_enabled_key" translatable="false">alarmsEnabled</string>
    <string name="pref_alarm_enabled_title" translatable="false">Set recurring alarms</string>
    <string name="pref_alarmtone_key" translatable="false">alarmTone</string>
    <string name="pref_alarmtone_title" translatable="false">Alarm tone</string>
    <string name="pref_alarmtone_default" translatable="false">content://settings/system/alarm_alert</string>
    <string name="pref_alarm_timing_key" translatable="false">alarmTiming</string>
    <string name="pref_alarm_timing_title" translatable="false">Alarm time</string>
    <string name="pref_alarm_timing_default" translatable="false">15,1</string>
    <string-array name="pref_alarm_times_titles">
        <item>@string/strArr1_1</item>
        <item>@string/strArr1_2</item>
        <item>@string/strArr1_3</item>
        <item>@string/strArr1_4</item>
        <item>@string/strArr1_5</item>
        <item>@string/strArr1_6</item>
    </string-array>
    <string name="strArr1_1">5 minutes prior</string>
    <string name="strArr1_2">10 minutes prior</string>
    <string name="strArr1_3">15 and 1 minutes prior</string>
    <string name="strArr1_4">20 and 1 minutes prior</string>
    <string name="strArr1_5">30 and 1 minutes prior</string>
    <string name="strArr1_6">30 and 5 minutes prior</string>
    <string-array name="pref_alarm_times_values">
        <item>5</item>
        <item>10</item>
        <item>15,1</item>
        <item>20,1</item>
        <item>30,1</item>
        <item>30,5</item>
    </string-array>
    <string name="alarm_message">Medication Intake Alarm</string>
    <string name="notice">Notice</string>
    <string name="dg_past_alarms_not_deleted">Be aware that any currently set alarms will not be deleted. If you wish to delete them you may do so from your Clock app at any point.</string>
    <string name="dg_past_alarms_bttn1">Go to my Clock app</string>
    <string name="later">Later</string>
    <string name="userID_prefkey" translatable="false">db_userID</string>
    <string name="automode_prefkey" translatable="false">is_auto_dose_generation_available</string>
    <string name="title_activity_dosages">My Dosage Plan</string>
    <string name="msg_main_nodosage">You do not have a dose to take today. Click My Dosage Plan to add a dosage plan.</string>
    <string name="dosages_str">The current dosage ends on</string>
    <string name="dosages_end_date" translatable="false">31st of February</string>
    <string name="dosages_str_new">A new INR value or manually input dosage will be required.</string>
    <string name="msg_no_current_dosage">There is no dosage plan applicable to today. Enter a new plan manually or generate one automatically using a recent blood test result.</string>
    <string name="bttn_new_dosage_manually">Enter New Plan Manually</string>
    <string name="bttn_new_dosage_auto">Generate New Plan</string>
    <string name="delete_plan">Abandon current plan</string>
    <string name="edit_plans">Edit plans</string>
    <string name="dg_abandon_plan_title">Abandon Plan?</string>
    <string name="db_abandon_plan_msg">Information in the past will be kept while future dosages will be deleted.</string>
    <string name="dg_abandon_plan_toast">Dosage plan abandoned</string>
    <string name="enter_dose_act_title">New Dosage - Input Manually</string>
    <string name="start_date" translatable="false">31st February 2016</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="new_dosage_INR">New INR:</string>
    <string name="new_dosage_INR_hint">INR at Start Date</string>
    <string name="start_date_txt">Start Date:</string>
    <string name="done_txt">Done</string>
    <string name="toast_confirmation">New Dosage recorded</string>
    <string name="toast_fill_all_fields">Please ensure all fields have been filled.</string>
    <string name="dialog_startDate_in_past">Please ensure the Start Date is not in the past.</string>
    <string name="dialog_startDate_in_past_title">Invalid starting date</string>
    <string name="dialog_dates_unavailable_title">Dates not available</string>
    <string name="dialog_dates_unavailable_msg">Another dosage plan already occupies one or more of the dates. You must delete this other plan or choose a different starting date.</string>
    <string name="dg_newINR_title">Generate a new dosage</string>
    <string name="dg_newINR_msg">Please carry out a blood test and provide the result below:</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="dg_starting_txt">Dosage starting date:</string>
    <string name="dg_inr_today_hint">INR as tested today</string>
    <string name="dg_noDAG_title">Automatic Dosage Generation is unavailable</string>
    <string name="dg_noDAG_msg">Unfortunately, we don\'t possess the data required to generate dosage plans for your specific medication or treatment parameters. See \"About\" in the options menu for more information.</string>
    <string name="dg_DAG_errormsg">Could not generate a dosage plan automatically.</string>
    <string name="dg_addinfo_required_title">Additional Information Required</string>
    <string name="dg_addinfo_required_msg">A previous dosage plan is needed to generate a new one. You may enter your first plan manually or, alternatively, provide here the sum of milligrams that you have taken in the past week.</string>
    <string name="dg_addinfo_required_hint">Past week intake sum (mg)</string>
    <string name="dg_addinfo_required_manu">Add manually</string>
    <string name="dg_addinfo_required_ok">Generate from sum</string>
    <string name="err_msg_ADG_not_supported_1">Unfortunately, automatic dosage generation for</string>
    <string name="err_msg_ADG_not_supported_2">is not currently supported due to lack of dosage adjustment tables.</string>
    <string name="err_msg_ADG_short_lastdosage">Your previous dosage has to be at least 3 days long for it to be used in the generation.</string>
    <string name="adg_excpt_INR7">An INR above 7 is highly dangerous. Repeat the blood test and if the result is indeed this high again, please contact your doctor immediately.</string>
    <string name="adg_excp_INR1">Recorded INR value cannot be under 1</string>
    <string name="adg_excp_mgOutOfBounds">Miligrams should be between 0 and 59 non-inclusive.</string>
    <string name="title_activity_notes">Citizen Science Notes</string>
    <string name="cit_sci_description">Citizen Science is a novel concept that allows people to participate in scientific projects
        regardless of professional background or knowledge. \n\nIn our case, we ask our users to help us better understand the interaction
    between lifestyle changes and INR in patients such as yourself. The way you can help is by making a note of any lifestyle changes you undergo that you think might have
        caused your INR to fluctuate.</string>
    <string name="dg_citsci_unrecorded_day_msg">You cannot make notes on days which we have no record of.
        Notes can be written for days associated with a dosage plan.</string>
    <string name="citsci_title">Contribute to ongoing research</string>
    <string name="bttn_all_plans">Edit Dosage Plans</string>
    <string name="info_about_title">About this application</string>
    <string name="info_about_body">The purpose of this application is twofold. Firstly, it helps patients like yourself manage your anticoagulation
        therapy more effectively and offers you the posibility of transitioning into self-monitoring, an easier,
        more comfortable and safer alternative to traditional treatment. \n\nSecondly, it offers you the possibility of contributing to the reaserch through Citizen Science,
    making you able to help doctors, other patients and yourself by increasing your awareness and understanding of all the interactions and external factors that cause dangerous
    INR fluctuations.</string>
    <string name="info_availability_title">Availability of Automatic Dosage Generation</string>
    <string name="info_availability_body">As the application stands right now, automatic dosage generation is only available for therapy based on acenocoumarol
        (commercially known as Sinthrome) and only under the specific INR therapeutic range of 2.5 to 3.5.
        \n\nFor all other treatment parameters the application is usable through manually input dosage plans.
    </string>
    <string name="info_factors_title">What kind of things should I make a note of?</string>
    <string name="info_factors_body">You should aim to note down any factors that might have pushed your INR up or down. These will often be related to consumption
        of Vitamin K (which thickens blood and thereby counteracts anticoagualnts), to your health, to other drugs or to lifestyle changes. Note that most of the
        foods noted here will only pose a risk if consumed in large quantities and therefore it is not recommended to simply avoid them. If they form part of your routine,
        and you have informed your doctor, it is generally advised to simply be consistent.
        \n\nFollowing we provide a non-exhaustive list of these factors: </string>
</resources>