<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditTextPreference
        android:key="@string/pref_mininr_key"
        android:title="@string/pref_mininr_title"
        android:defaultValue=""
        android:selectAllOnFocus="true"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="@string/pref_maxinr_key"
        android:title="@string/pref_maxinr_title"
        android:defaultValue=""
        android:selectAllOnFocus="true"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="@string/pref_med_name_key"
        android:title="@string/pref_med_name_title"
        android:defaultValue="Sinthrome"
        android:selectAllOnFocus="true"
        android:inputType="textNoSuggestions"
        android:singleLine="true"
        android:maxLines="1" />

    <com.example.andres.thirdypsinthrome.TimePreference
        android:key="@string/pref_med_time_key"
        android:title="@string/pref_med_time_title"
        android:defaultValue="@string/pref_med_time_default"/>

    <EditTextPreference
        android:key="@string/pref_mg_per_tablet_key"
        android:title="@string/pref_mg_per_tablet_title"
        android:defaultValue="4"
        android:selectAllOnFocus="true"
        android:inputType="number"
        android:singleLine="true"
        android:maxLines="1" />

    <!-- TODO I wonder how I could put a button here -->

</PreferenceScreen>