<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16sp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dg_msg_txtv"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dg_newINR_msg"
        android:textColor="@android:color/black"
        android:paddingBottom="2dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/dg_INR_editText"
        android:hint="@string/dg_inr_today_hint"
        android:layout_gravity="right"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/panel2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/dg_starting_txt"
            android:textColor="@android:color/black" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:checkedButton="@+id/rbttn_today"
            android:layout_gravity="right">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today"
                android:id="@+id/rbttn_today" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tomorrow"
                android:id="@+id/rbttn_tomorrow" />
        </RadioGroup>

    </LinearLayout>

</LinearLayout>
