<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.andres.thirdypsinthrome.WelcomeActivityFragment">

    <TextView android:text="@string/welcome" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="5"
        android:password="false"
        android:textSize="40sp" />
    <TextView android:text="@string/welcome_txt" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="3"
        android:textSize="@dimen/abc_text_size_large_material" />
    <Button
        android:text="@string/bttn_begin"
        android:id="@+id/bttn_begin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Buttons_Font"
        android:gravity="center"
        android:layout_weight="1"
        android:paddingTop="0dp"
        android:paddingRight="50dp"
        android:paddingLeft="50dp"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp" />

</LinearLayout>
