<!-- android:layout_toRightOf is needed for backwrds compatibility with API 17-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivityFragment"
    android:weightSum="2"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_weight="0.85"
        android:background="@color/accent_material_dark"
        android:measureWithLargestChild="false"
        android:gravity="center"
        android:layout_height="40dp"
        android:onClick="todayPressed">

        <TextView
            android:id="@+id/txtv_main_quantity"
            android:text="99.95"
            android:textSize="72sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:gravity="bottom|center_horizontal" />
        <TextView
            android:id="@+id/txtv_main_date"
            android:text="Today, 45th of January"
            android:textSize="@dimen/abc_text_size_headline_material"
            android:layout_above="@id/txtv_main_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:gravity="center_horizontal" />
        <TextView
            android:id="@+id/txtv_main_units"
            android:text="@string/weight_units"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:layout_alignBottom="@+id/txtv_main_quantity"
            android:layout_toRightOf="@+id/txtv_main_quantity"
            android:layout_alignTop="@+id/txtv_main_quantity"
            android:paddingBottom="10dp"
            android:textSize="24sp"
            android:layout_alignRight="@+id/txtv_main_date"
            android:layout_alignEnd="@+id/txtv_main_date" />

    </RelativeLayout>

    <ScrollView
            android:id="@+id/main_buttons_scrollview"
            android:background="@color/material_grey_100"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.15"
            android:fillViewport="false">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:dividerPadding="16dp">
                <Button
                    android:text="@string/bttn_my_dosage"
                    android:id="@+id/bttn_my_dosage"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="buttonPressed"
                    style="@style/Buttons_Font" />
                <Button
                    android:text="@string/bttn_my_treatment"
                    android:id="@+id/bttn_my_treatment"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="buttonPressed"
                    style="@style/Buttons_Font" />
                <Button
                    android:text="@string/bttn_cit_science"
                    android:id="@+id/bttn_cit_science"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="buttonPressed"
                    style="@style/Buttons_Font" />
                <Button
                    android:text="@string/bttn_hist_and_stats"
                    android:id="@+id/bttn_hist_and_stats"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="buttonPressed"
                    style="@style/Buttons_Font" />
            </LinearLayout>
        </ScrollView>

</LinearLayout>
