<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.andres.thirdypsinthrome.DosagesFragment"
    android:gravity="bottom">

    <HorizontalScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/horizontalScrollView"
        android:layout_weight="1"
        android:fillViewport="false">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/scrollingLinearLayout"
                android:orientation="horizontal">


            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/dsg_item1"
                android:background="#ffefa9"
                android:minWidth="70dp">

                <include
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    layout="@layout/dosage_item"
                    android:layout_gravity="center" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/dsg_item2"
                android:background="#ffe374"
                android:minWidth="70dp">

                <include
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    layout="@layout/dosage_item"
                    android:layout_weight="1"
                    android:layout_gravity="center" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/dsg_item3"
                android:background="#ffc26c"
                android:minWidth="70dp">

                <include
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    layout="@layout/dosage_item"
                    android:layout_gravity="center" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/dsg_item4"
                android:background="#ffab46"
                android:minWidth="70dp">

                <include
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    layout="@layout/dosage_item"
                    android:layout_gravity="center" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/dsg_item5"
                android:background="#ffd24d"
                android:minWidth="70dp">

                <include
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    layout="@layout/dosage_item"
                    android:layout_gravity="center" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/dsg_item6"
                android:background="#ffeb5b"
                android:minWidth="70dp">

                <include
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    layout="@layout/dosage_item"
                    android:layout_gravity="center" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/dsg_item7"
                android:background="#fff293"
                android:minWidth="70dp">

                <include
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    layout="@layout/dosage_item"
                    android:layout_gravity="center" />
            </FrameLayout>

        </LinearLayout>
    </HorizontalScrollView>

    <TextView android:text="@string/dosages_str"
        android:id="@+id/dosage_txt1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="10dp" />
    <TextView android:text="@string/dosages_end_date"
        android:id="@+id/dosage_txt2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" />
    <TextView android:text="@string/dosages_str_new"
        android:id="@+id/dosage_txt3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="10dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/bttn_all_plans"
        android:id="@+id/btt_dosage_callendar"
        android:onClick="buttonPressed"
        android:layout_gravity="bottom|center_horizontal" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/bttn_new_dosage_auto"
        android:id="@+id/btt_enter_INR"
        android:onClick="buttonPressed"
        android:layout_gravity="bottom|center_horizontal" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/bttn_new_dosage_manually"
        android:id="@+id/btt_enter_dosage"
        android:onClick="buttonPressed"
        android:layout_marginBottom="20dp" />

</LinearLayout>
